<resources>
    <string name="app_name">GeoMemories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="parse">Parse</string>
    <string name="title_activity_map">MapsActivity</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="memory_image">Memory Image</string>
    <string name="add_memory">Add Memory</string>
    <string name="view_map">View Map</string>
    <string name="title_map">Map</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_settings">Settings</string>
    <string name="memory_image_detail">Memory Image Detail</string>
    <string name="captured_photo">Captured Photo</string>
    <string name="map_type">Map Type</string>
    <string name="gallery_display">Gallery Display</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="title_analytics">Analytics</string>
    <string-array name="map_types_array">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="gallery_display_array">
        <item>Grid</item>
        <item>Timeline</item>
    </string-array>
</resources>