<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_home" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/map" />
    <item
        android:id="@+id/captureMemoryFragment"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="Capture" />

    <item
        android:id="@+id/galleryFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/analyticsFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_analytics" />

</menu>